Fixed another issue regarding lightbox
Lightbox was not showing the correct opacity for the active slide, fixed by adding a more specific path in CSS

--- a/One-Page Dog Website/css/one_page_website.css
+++ b/One-Page Dog Website/css/one_page_website.css
@@ -136,7 +136,7 @@ img.demo {
     opacity: 0.6;
 }
 
-.active,
+img.active,
 .demo:hover {
     opacity: 1;
 }
